<resources>
    <string name="app_name">My Notes</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="search_notes">Search notes…</string>
    <string name="start_noting">Start Noting…</string>
    <string name="back">back</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="no_notes">Notes are not available. \nPlease use below + button add new notes.</string>
</resources>