<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AddNotesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"
                android:padding="8dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:contentDescription="@string/delete"
                android:padding="4dp"
                android:src="@drawable/baseline_delete_forever_24"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/save"
                android:padding="8dp"
                android:src="@drawable/baseline_check_24" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:minHeight="32dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <com.yahiaangelo.markdownedittext.MarkdownEditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="541dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/start_noting"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:lineSpacingMultiplier="1.8"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/stylesbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <com.yahiaangelo.markdownedittext.MarkdownStylesBar
        android:id="@+id/stylesbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        app:buttonColor="@color/style_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>